[gd_scene load_steps=5 format=3 uid="uid://jwlhjewyq1e2"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_aigl0"]
[ext_resource type="Texture2D" uid="uid://cfwdilpt10qvw" path="res://main_menu/photo_5336938779216302636_y (1).jpg" id="1_mex36"]
[ext_resource type="PackedScene" uid="uid://csjgxsako2y18" path="res://option menu/option_menu.tscn" id="3_nsr0v"]
[ext_resource type="PackedScene" uid="uid://dd5m3up6bjnad" path="res://first_level/first_level.tscn" id="4_tt0ip"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aigl0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mex36")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="separater" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 240

[node name="separater1" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="separater2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="start_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 90)
layout_mode = 2
text = "старт"

[node name="option_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
text = "настройки"

[node name="exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
text = "выход"

[node name="option_menu" parent="." instance=ExtResource("3_nsr0v")]
visible = false
layout_mode = 1

[node name="first_level" parent="." instance=ExtResource("4_tt0ip")]
visible = false
layout_mode = 1
